--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rGN-zt-Ql9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nkh-u9-4Vs">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -239,7 +239,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MDE-zB-bgR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3454" y="-322"/>
+            <point key="canvasLocation" x="2780" y="-303"/>
         </scene>
         <!--Post Table View Controller-->
         <scene sceneID="MG4-gp-EOW">
@@ -483,7 +483,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eJl-Yd-YAS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4290" y="-322"/>
+            <point key="canvasLocation" x="3614" y="-304"/>
         </scene>
         <!--Select Categories Table View Controller-->
         <scene sceneID="8VR-Us-r5G">
@@ -543,8 +543,9 @@
         <!--Tab Bar Controller-->
         <scene sceneID="BqH-Hu-8TP">
             <objects>
-                <tabBarController storyboardIdentifier="MainTableViewController" automaticallyAdjustsScrollViewInsets="NO" id="rGN-zt-Ql9" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainTableViewController" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="rGN-zt-Ql9" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="M2u-oS-oqf"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HSZ-mS-cWc">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -585,7 +586,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7qd-uO-hjT">
-                                <rect key="frame" x="48" y="280" width="318" height="226"/>
+                                <rect key="frame" x="48" y="324" width="318" height="226"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="uBz-sV-tBo">
                                         <rect key="frame" x="0.0" y="0.0" width="318" height="128"/>
@@ -644,7 +645,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배달의 기숙사" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdm-K8-kmB">
-                                <rect key="frame" x="48" y="194" width="318" height="36"/>
+                                <rect key="frame" x="48" y="238" width="318" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <color key="textColor" red="0.67450982329999998" green="0.78431367870000002" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -665,11 +666,12 @@
                     <connections>
                         <outlet property="emailTextField" destination="ig3-Gt-HEK" id="0cD-lK-xOZ"/>
                         <outlet property="passwordTextField" destination="Hat-Vu-gwb" id="R0U-lC-OnD"/>
+                        <segue destination="rGN-zt-Ql9" kind="show" identifier="login" id="PRU-zo-vQu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y8L-Wn-gWP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3894" y="84"/>
+            <point key="canvasLocation" x="-3358" y="84"/>
         </scene>
         <!--회원가입-->
         <scene sceneID="Mh6-dI-um7">
@@ -794,7 +796,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlM-R3-P9y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2080" y="325"/>
+            <point key="canvasLocation" x="-1888" y="576"/>
         </scene>
         <!--홈-->
         <scene sceneID="0Wa-Qt-cm0">
@@ -1580,7 +1582,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UY8-nc-euj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2990" y="325"/>
+            <point key="canvasLocation" x="-2575" y="576"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EvN-ie-Hnd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nkh-u9-4Vs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nJp-zj-d1l">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="gzs-Ha-SKa" kind="relationship" relationship="rootViewController" id="2pV-sh-Z8J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mRR-lD-k2I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-4052" y="84"/>
         </scene>
     </scenes>
     <resources>
