--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nkh-u9-4Vs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rGN-zt-Ql9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -193,7 +193,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0W-Rt-afH">
                                 <rect key="frame" x="0.0" y="88" width="414" height="709"/>
                                 <connections>
-                                    <segue destination="O66-qQ-VQx" kind="embed" id="L8B-Re-Ja0"/>
+                                    <segue destination="O66-qQ-VQx" kind="embed" identifier="sendPostInformation" id="L8B-Re-Ja0"/>
                                 </connections>
                             </containerView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tri-o0-Lp6">
@@ -904,7 +904,6 @@
                                             <outlet property="postTitleLabel" destination="UwI-A8-coa" id="rC1-Ea-qOb"/>
                                             <outlet property="progressLabel" destination="ISi-Nh-Dmf" id="eYs-D7-2RB"/>
                                             <outlet property="symbolLabel" destination="v9F-ix-3jl" id="ij8-2f-WQb"/>
-                                            <segue destination="s6m-6S-5kq" kind="show" id="G8b-qU-FKA"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1192,6 +1191,7 @@
                     <navigationItem key="navigationItem" id="9A1-AG-Ucf"/>
                     <connections>
                         <outlet property="mainTableView" destination="Vng-IY-FkT" id="5h8-1E-Fix"/>
+                        <segue destination="s6m-6S-5kq" kind="show" identifier="sendPostSegue" id="bEZ-Dz-c8p"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="an3-du-pz5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
