--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -826,7 +826,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vng-IY-FkT">
-                                <rect key="frame" x="0.0" y="261" width="414" height="635"/>
+                                <rect key="frame" x="0.0" y="271" width="414" height="625"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="124" id="Deh-KX-1qF" customClass="MainTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
@@ -1183,7 +1183,7 @@
                             <constraint firstAttribute="bottom" secondItem="Vng-IY-FkT" secondAttribute="bottom" id="GGU-Zv-9pb"/>
                             <constraint firstItem="bbt-Yi-QnQ" firstAttribute="leading" secondItem="UsP-Vp-r1i" secondAttribute="leading" id="MND-Sf-0ZF"/>
                             <constraint firstItem="UsP-Vp-r1i" firstAttribute="bottom" secondItem="ttI-lU-IGG" secondAttribute="bottom" constant="20" id="Tj4-D8-d53"/>
-                            <constraint firstItem="Vng-IY-FkT" firstAttribute="top" secondItem="UsP-Vp-r1i" secondAttribute="top" constant="173" id="gzo-gd-q20"/>
+                            <constraint firstItem="Vng-IY-FkT" firstAttribute="top" secondItem="UsP-Vp-r1i" secondAttribute="top" constant="183" id="gzo-gd-q20"/>
                             <constraint firstItem="bbt-Yi-QnQ" firstAttribute="top" secondItem="UsP-Vp-r1i" secondAttribute="top" id="n5N-9o-jaD"/>
                             <constraint firstItem="bbt-Yi-QnQ" firstAttribute="trailing" secondItem="UsP-Vp-r1i" secondAttribute="trailing" id="ny7-Tw-2Ye"/>
                         </constraints>
@@ -1220,7 +1220,7 @@
         <!--더보기-->
         <scene sceneID="24h-z5-ZT6">
             <objects>
-                <tableViewController id="hKt-7V-in5" sceneMemberID="viewController">
+                <tableViewController id="hKt-7V-in5" customClass="MoreDetailsTableViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="9Dr-JP-twx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1590,21 +1590,29 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="fHX-Nc-g8K">
                                         <rect key="frame" x="20" y="901" width="374" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fHX-Nc-g8K" id="ul1-xg-baT">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fHX-Nc-g8K" id="ul1-xg-baT">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그아웃" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCz-jP-g03">
-                                                    <rect key="frame" x="15" y="13.5" width="48.5" height="17"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esp-Yv-I7Y">
+                                                    <rect key="frame" x="15" y="0.0" width="359" height="43"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="43" id="wLk-el-Nsr"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <state key="normal" title="로그아웃">
+                                                        <color key="titleColor" systemColor="labelColor"/>
+                                                    </state>
+                                                    <connections>
+                                                        <segue destination="Ebz-Nh-nme" kind="unwind" identifier="logOut" unwindAction="unwindToLogInViewControllerWithUnwindSegue:" id="ekB-Z8-gP4"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="xCz-jP-g03" secondAttribute="trailing" constant="324.32999999999998" id="Ees-Pg-HTB"/>
-                                                <constraint firstItem="xCz-jP-g03" firstAttribute="leading" secondItem="ul1-xg-baT" secondAttribute="leading" constant="15" id="Tpm-jS-6Mv"/>
-                                                <constraint firstItem="xCz-jP-g03" firstAttribute="centerY" secondItem="ul1-xg-baT" secondAttribute="centerY" id="rZl-im-vhM"/>
+                                                <constraint firstItem="esp-Yv-I7Y" firstAttribute="leading" secondItem="ul1-xg-baT" secondAttribute="leading" constant="15" id="1MC-2a-aqr"/>
+                                                <constraint firstAttribute="bottom" secondItem="esp-Yv-I7Y" secondAttribute="bottom" id="CKU-pV-8xZ"/>
+                                                <constraint firstItem="esp-Yv-I7Y" firstAttribute="top" secondItem="ul1-xg-baT" secondAttribute="top" id="eGZ-fa-phc"/>
+                                                <constraint firstAttribute="trailing" secondItem="esp-Yv-I7Y" secondAttribute="trailing" id="g4o-fX-hXF"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1623,6 +1631,7 @@
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrD-V1-QrE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="Ebz-Nh-nme" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1593" y="807"/>
         </scene>
