--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -830,64 +830,61 @@
                                 <rect key="frame" x="0.0" y="271" width="414" height="625"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="124" id="Deh-KX-1qF" customClass="MainTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="124"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="60" id="Deh-KX-1qF" customClass="MainTableViewCell" customModule="DormitoryForDelivery" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Deh-KX-1qF" id="cmD-Xf-mUq">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="124"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="ZI1-yh-khW">
-                                                    <rect key="frame" x="8" y="8" width="398" height="108"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="ZI1-yh-khW">
+                                                    <rect key="frame" x="8" y="8" width="398" height="44"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9F-ix-3jl">
-                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="108"/>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="분식" translatesAutoresizingMaskIntoConstraints="NO" id="GGs-Lw-ssp">
+                                                            <rect key="frame" x="0.0" y="0.0" width="35" height="44"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="70" id="fW1-8A-XLC"/>
-                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="g3W-4S-b1N"/>
-                                                                <constraint firstAttribute="height" constant="94" id="u9Q-0F-qBu"/>
+                                                                <constraint firstAttribute="width" secondItem="GGs-Lw-ssp" secondAttribute="height" multiplier="1:1" id="dTV-5s-ev5"/>
+                                                                <constraint firstAttribute="width" constant="35" id="giC-Lo-KZZ"/>
+                                                                <constraint firstAttribute="height" constant="35" id="tch-cU-vEJ"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Rfj-lz-D77">
-                                                            <rect key="frame" x="72" y="0.0" width="326" height="108"/>
+                                                            <rect key="frame" x="38" y="0.0" width="360" height="44"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UwI-A8-coa">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="326" height="54"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="360" height="22"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="108" translatesAutoresizingMaskIntoConstraints="NO" id="ta2-WB-EwQ">
-                                                                    <rect key="frame" x="0.0" y="54" width="326" height="54"/>
+                                                                    <rect key="frame" x="0.0" y="22" width="360" height="22"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROR-KG-l2V">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="163" height="54"/>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="230" height="22"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oha-uU-487" customClass="CircleProgressViewController" customModule="DormitoryForDelivery" customModuleProvider="target">
-                                                                            <rect key="frame" x="271" y="0.0" width="55" height="54"/>
+                                                                            <rect key="frame" x="338" y="0.0" width="22" height="22"/>
                                                                             <subviews>
-                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISi-Nh-Dmf">
-                                                                                    <rect key="frame" x="6" y="16" width="42" height="21"/>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1/3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISi-Nh-Dmf">
+                                                                                    <rect key="frame" x="1" y="2" width="20" height="17"/>
                                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
                                                                                 </label>
                                                                             </subviews>
                                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" secondItem="oha-uU-487" secondAttribute="height" multiplier="1:1" id="Pjv-wJ-N4h"/>
+                                                                            </constraints>
                                                                         </view>
                                                                     </subviews>
                                                                 </stackView>
                                                             </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="ROR-KG-l2V" firstAttribute="width" secondItem="UwI-A8-coa" secondAttribute="width" multiplier="0.5" id="Wl0-Ta-U5M"/>
-                                                            </constraints>
                                                         </stackView>
                                                     </subviews>
                                                 </stackView>
@@ -900,11 +897,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="catagoryImage" destination="GGs-Lw-ssp" id="j5l-Zb-dk6"/>
                                             <outlet property="categoriesLabel" destination="ROR-KG-l2V" id="rhV-Wg-YuQ"/>
                                             <outlet property="circularProgressBarView" destination="oha-uU-487" id="bz0-x7-noa"/>
                                             <outlet property="postTitleLabel" destination="UwI-A8-coa" id="rC1-Ea-qOb"/>
                                             <outlet property="progressLabel" destination="ISi-Nh-Dmf" id="eYs-D7-2RB"/>
-                                            <outlet property="symbolLabel" destination="v9F-ix-3jl" id="ij8-2f-WQb"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
